# Chess-Game

./: Board.cpp  Board.h  CMakeLists.txt  Header.h  Player.cpp  Player.h  README.md  common.cpp  common.h  engine.cpp  engine.h  main.cpp  new.uxf  object.cpp  object.h
sprites/: board.xcf
